update to athens marathon post

--- a/trips/2010/athens-marathon/_posts/2010-10-27-to-athens.markdown
+++ b/trips/2010/athens-marathon/_posts/2010-10-27-to-athens.markdown
@@ -1,7 +1,5 @@
 ---
 title: To Athens...
-categories:
-- Greece
+author: Will
 ---
-In addition to our now neglected daily journals, there is one more project weighing on our minds. A few days before we met the Mongol Ralliers, we were commissioned by Rough Guides to write a few travel pieces. They, unlike our entries, cannot be postponed indefinitely. The due date is rapidly approaching, and we've yet to make the time to work on them.  
-
+Future post
