minor updates and typo fix in blog entry

--- a/trips/2010/nyc-barefoot-run/_posts/2010-10-9-nyc-day-1.markdown
+++ b/trips/2010/nyc-barefoot-run/_posts/2010-10-9-nyc-day-1.markdown
@@ -58,7 +58,7 @@ After some delicious Souvlaki, we worked our way through the streets and down to
 
 As this would be our only night in NYC, we decided to make our way down to Times Square before getting dinner and calling it a night.  Angelle really wanted to find the M&M store, so after navigating our way through herds of kids in Toys "R" Us to ask a worker where the M&M store was, we quickly retreaded from the chaotic super-toy-store as fast as possible.
 
-[![M&M Store Mugs](http://farm5.static.flickr.com/4092/5070717262_5a2c5dae03.jpg)](http://farm5.static.flickr.com/4092/5070717262_5a2c5dae03_z.jpg);
+[![M&M Store Mugs](http://farm5.static.flickr.com/4092/5070717262_5a2c5dae03.jpg)](http://farm5.static.flickr.com/4092/5070717262_5a2c5dae03_z.jpg)
 
 I guess as is to be expected, the check-out lines in the M&M store were _long_ and we decided it was probably not worth a 1 hour wait in line to taste some exotic M&M flavors that we'd never tried before, so we looked around, checked out what they had, and promptly scurried out.
 
