moved al posts to _posts, and added _includes

--- a/_posts/2010-10-9-nyc-day-1.markdown
+++ b/_posts/2010-10-9-nyc-day-1.markdown
@@ -4,7 +4,7 @@ title: Drive to NYC and Barefoot Clinic in Central Park
 author: Will
 kml: 2010-10-09.kml
 ---
-Today got off to an early 5:15am start.  The plan was to leave around 6AM, but after some last minute changes to the group, we ended up heading out close to 7AM, which is still not too terrible.
+Today got off to an early 5:15am start.  The plan was to leave around 6am, but after some last minute changes to the group, we ended up heading out close to 7am, which is still not too terrible.
 
 Once on the road, the first stop was Dunkin' Donuts to please the hungry.
 
@@ -62,7 +62,7 @@ As this would be our only night in NYC, we decided to make our way down to Times
 
 I guess as is to be expected, the check-out lines in the M&M store were _long_ and we decided it was probably not worth a 1 hour wait in line to taste some exotic M&M flavors that we'd never tried before, so we looked around, checked out what they had, and promptly scurried out.
 
-Times Square was so crowded that we couldn't handle it for long, it must've taken 15 minutes just to walk one block as you flow with the herd at whatever pace it decides to move at.  Since we needed to wake up early (5AM again!? :() for the race the next day, we decide to get outta Times Square, grab some dinner, and head for the hotel to pass out.
+Times Square was so crowded that we couldn't handle it for long, it must've taken 15 minutes just to walk one block as you flow with the herd at whatever pace it decides to move at.  Since we needed to wake up early (5am again!? :() for the race the next day, we decide to get outta Times Square, grab some dinner, and head for the hotel to pass out.
 
 After a few attempts at a Thai Tappas Restaurant and a Pizzeria that both had a wait for a table, we settled in on [Jack Bistro Bar] in Greenwich Village, and we certainly did not regret it.  Everything was delicious, and nobody had problems cleaning their plate.
 
