lightbox updates, fix typos on nyc barefoot run post

--- a/_posts/NYC Barefoot Run/2010-10-10-nyc-day-2.markdown
+++ b/_posts/NYC Barefoot Run/2010-10-10-nyc-day-2.markdown
@@ -6,12 +6,12 @@ kml: 2010-10-10.kml
 ---
 [![First NYC Barefoot Run Group Panorama](http://farm5.static.flickr.com/4112/5073219907_162a6e7146_z.jpg)](http://farm5.static.flickr.com/4112/5073219907_162a6e7146_z.jpg)
 
-So there is the first group of NYC Barefoot Runners.  Of course, the day started off pretty early, with another 5am wakeup, a quick breakfast of some park sausages (maybe?), an apple, and an orange, courtesy of the Hampton Inn. Then it was off to the metro.
+So there is the first group of NYC Barefoot Runners.  Of course, the day started off pretty early, with another 5am wakeup, a quick breakfast of some pork sausages (maybe?), an apple, and an orange, courtesy of the Hampton Inn. Then it was off to the metro.
 
 
 [![Me and Andy in the Metro](http://farm5.static.flickr.com/4131/5073624215_6827119ba4.jpg)](http://farm5.static.flickr.com/4131/5073624215_6827119ba4_z.jpg)
 
-We saw a few runners at the metro, but they were heading to the New York Half Marathon, which was apparently that day as well. I did notice that New York is nice and peaceful in the morning; a welcome change from the rowdiness and noises of the day.
+We saw a few runners at the metro, but they were heading to the Staten Island Half Marathon, which was apparently that day as well. I did notice that New York is nice and peaceful in the morning; a welcome change from the rowdiness and noises of the day.
 
 [![Peaceful New York City Skyline](http://farm5.static.flickr.com/4146/5073623493_066b3b198b.jpg)](http://farm5.static.flickr.com/4146/5073623493_066b3b198b_z.jpg)
 
