moved all normal and NYC Barefoot run posts to textile from markdown, and about page

--- a/about.textile
+++ b/about.textile
@@ -9,4 +9,4 @@ Hey everyone.  We are Will and Angelle, and we love travelling.  Whenever we are
 This blog is a place for us to document our travels, and allow us to share them with friends and family. Hopefully you'll enjoy it as much as we do, thanks for stopping by!
 
 
-![Will + Angelle](http://farm5.static.flickr.com/4144/5063291983_09264799bf.jpg)
+!http://farm5.static.flickr.com/4144/5063291983_09264799bf.jpg(Will + Angelle)!
