finished NYC Race day blog post

--- a/_posts/NYC Barefoot Run/2010-10-10-nyc-day-2.textile
+++ b/_posts/NYC Barefoot Run/2010-10-10-nyc-day-2.textile
@@ -41,3 +41,10 @@ After running/playing/jumping around the island for a little bit, we decided it 
 
 !http://farm5.static.flickr.com/4112/5073632341_77a1933bee.jpg("Finishing" the NYC Barefoot Run)!:http://farm5.static.flickr.com/4112/5073632341_77a1933bee_z.jpg
 
+We hung out for a little bit "after" (others were still running) the race, and I even won a T-Shirt (albeit an XL) from the vibram booth. Ready to head back, we hopped the ferry back to the mainland, and hit the metro to the hotel to try and meet up with the rest of our group.
+
+!http://farm5.static.flickr.com/4108/5074230982_d0d4d3c972.jpg(NYC Metro Escalator)!:http://farm5.static.flickr.com/4108/5074230982_d0d4d3c972_z.jpg
+
+After relaxing and recharging for an hour at the hotel, we decided to go see ground zero (even though we found out there is still literally _nothing_ to see) and then grab a bite to eat.  There was not time to do much before we would need to start heading back home, so we mostly walked around the area near our hotel and by the water, just enjoying the beautiful day.  I'll leave off with a nice photo of me sporting my NYC Barefoot Run T-shirt.
+
+!http://farm5.static.flickr.com/4149/5074237080_9f460d07c2.jpg(Me and Mom in NYC)!:http://farm5.static.flickr.com/4149/5074237080_9f460d07c2_z.jpg
