fix lightbox on frontpage, add first letter span for articles, and jump p to use in articles

--- a/_posts/NYC Barefoot Run/2010-10-10-nyc-day-2.textile
+++ b/_posts/NYC Barefoot Run/2010-10-10-nyc-day-2.textile
@@ -6,8 +6,7 @@ kml: 2010-10-10.kml
 ---
 !http://farm5.static.flickr.com/4112/5073219907_162a6e7146_z.jpg(First NYC Barefoot Run Group Panorama)!:http://farm5.static.flickr.com/4112/5073219907_162a6e7146_z.jpg
 
-So there is the first group of NYC Barefoot Runners.  Of course, the day started off pretty early, with another 5am wakeup, a quick breakfast of some pork sausages (maybe?), an apple, and an orange, courtesy of the Hampton Inn. Then it was off to the metro.
-
+%(fl)S% o there is the first group of NYC Barefoot Runners.  Of course, the day started off pretty early, with another 5am wakeup, a quick breakfast of some pork sausages (maybe?), an apple, and an orange, courtesy of the Hampton Inn. Then it was off to the metro.
 
 !http://farm5.static.flickr.com/4131/5073624215_6827119ba4.jpg(Me and Andy in the Metro)!:http://farm5.static.flickr.com/4131/5073624215_6827119ba4_z.jpg
 
@@ -44,6 +43,8 @@ After running/playing/jumping around the island for a little bit, we decided it 
 We hung out for a little bit "after" (others were still running) the race, and I even won a T-Shirt (albeit an XL) from the vibram booth. Ready to head back, we hopped the ferry back to the mainland, and hit the metro to the hotel to try and meet up with the rest of our group.
 
 !http://farm5.static.flickr.com/4108/5074230982_d0d4d3c972.jpg(NYC Metro Escalator)!:http://farm5.static.flickr.com/4108/5074230982_d0d4d3c972_z.jpg
+
+!http://farm5.static.flickr.com/4083/5085089061_a68d93f53e.jpg(Our Hotel!)!:http://farm5.static.flickr.com/4083/5085089061_a68d93f53e_z.jpg
 
 After relaxing and recharging for an hour at the hotel, we decided to go see ground zero (even though we found out there is still literally _nothing_ to see) and then grab a bite to eat.  There was not time to do much before we would need to start heading back home, so we mostly walked around the area near our hotel and by the water, just enjoying the beautiful day.  I'll leave off with a nice photo of me sporting my NYC Barefoot Run T-shirt.
 
