--- a/uncopyright.textile
+++ b/uncopyright.textile
@@ -1,9 +1,10 @@
 ---
+title: Uncopyright
 layout: default
 ---
 h1. Uncopyright
 
-This blog is Uncopyrighted. Its author, William Wolf, has released all claims on copyright and has put all the content of this blog into the public domain.
+%(fl)T% his blog is Uncopyrighted. Its author, William Wolf, has released all claims on copyright and has put all the content of this blog into the public domain.
 
 No permission is needed to copy, distribute, or modify the content of this site. Credit is appreciated but not required.
 
