--- a/base/uncopyright.textile
+++ b/base/uncopyright.textile
@@ -12,7 +12,7 @@ This site and its sub-domains are uncopyrighted. I release all claims on copyrig
 
 No permission is needed to copy, distribute, or modify the content of this site. Credit is appreciated but not required.
 
-The entire source code for this website is avaieble "here":src
+The "source code":src for this website is available online to everyone.
 
 For more information on why copyright is bad, and why I chose to uncopyright my work, check out some of the links below:
 
