--- a/blog/_posts/2010-10-18-Raw-Organic-Live-Food-Bars.textile
+++ b/blog/_posts/2010-10-18-Raw-Organic-Live-Food-Bars.textile
@@ -7,13 +7,13 @@ tags:
 - whole foods
 ---
 
-%(fl)T% oday, while checking out at Whole Foods with Angelle, I decided to take a look at some of the energy/power bars overflowing in the checkout aisle.  I usually never bother to look because they are almost always loaded with junk that I don't want. 
+%(fl)T% oday, while checking out at Whole Foods with Angelle, I decided to take a look at some of the energy/power bars overflowing the checkout aisle.  I usually never bother to look because they are almost always loaded with junk that I don't want. 
 
 This time, however, a "Raw Organic Live Food Bar":http://www.rawindulgence.com/ caught my eye and got me to investigate.
 
 !http://farm2.static.flickr.com/1389/5097941029_f4189b618a_z.jpg(Raw Organic Live Food Bar Cashew & Agave Nectar)!:http://farm2.static.flickr.com/1389/5097941029_f4189b618a_z.jpg
 
-I jumped to the ingredients first, as I usually do, and was quite surprised.  The ingredients ist for each of their bars was 5-7 ingredients, with no chemical names, or anything that grandma' wouldn't recognize.  It seems like these things are made out of _food_!
+I jumped to the ingredients first, as I usually do, and was quite surprised.  The ingredients ist for each of their bars was 5-7 ingredients, with no chemical names, or anything that grandma' wouldn't recognize (as food).  It seems like these things are made out of _food_!
 
 !http://farm2.static.flickr.com/1118/5097941605_b52883ef1d_z.jpg(Raw Organic Live Food Bar Cashew & Agave Nectar Label)!:http://farm2.static.flickr.com/1118/5097941605_b52883ef1d_z.jpg
 
