--- a/blog/_posts/2010-10-18-Raw-Organic-Live-Food-Bars.textile
+++ b/blog/_posts/2010-10-18-Raw-Organic-Live-Food-Bars.textile
@@ -13,7 +13,7 @@ This time, however, a "Raw Organic Live Food Bar":http://www.rawindulgence.com/ 
 
 !http://farm2.static.flickr.com/1389/5097941029_f4189b618a_z.jpg(Raw Organic Live Food Bar Cashew & Agave Nectar)!:http://farm2.static.flickr.com/1389/5097941029_f4189b618a_z.jpg
 
-I jumped to the ingredients first, as I usually do, and was quite surprised.  The ingredients ist for each of their bars was 5-7 ingredients, with no chemical names, or anything that grandma' wouldn't recognize (as food).  It seems like these things are made out of _food_!
+I jumped to the ingredients first, as I usually do, and was quite surprised.  The ingredients list for each of their bars was 5-7 ingredients, with no chemical names, or anything that grandma' wouldn't recognize (as food).  It seems like these things are made out of _food_!
 
 !http://farm2.static.flickr.com/1118/5097941605_b52883ef1d_z.jpg(Raw Organic Live Food Bar Cashew & Agave Nectar Label)!:http://farm2.static.flickr.com/1118/5097941605_b52883ef1d_z.jpg
 
